--- a/Websites/bugs.webkit.org/template/en/custom/bug/comments.html.tmpl
+++ b/Websites/bugs.webkit.org/template/en/custom/bug/comments.html.tmpl
@@ -335,7 +335,7 @@
       <legend>Note</legend>
       You need to
       <a href="show_bug.cgi?id=
-              [%- bug.bug_id %]&amp;GoAheadAndLogIn=1">log in</a>
+              [%- bug.bug_id FILTER uri %]&amp;GoAheadAndLogIn=1">log in</a>
       before you can comment on or make changes to this [% terms.bug %].
     </fieldset>
     [% END %]
