Update Bugzilla to include 5.0.4.1 improvements https://bugs.webkit.org/show_bug.cgi?id=284772
Reviewed by David Kilzer.

Canonical link: https://commits.webkit.org/288100@main

--- a/Websites/bugs.webkit.org/template/en/default/global/header.html.tmpl
+++ b/Websites/bugs.webkit.org/template/en/default/global/header.html.tmpl
@@ -90,6 +90,8 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     [% END %]
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+
     [% SET yui = yui_resolve_deps(yui, yui_deps) %]
 
     [% SET css_sets = css_files(style_urls, yui, yui_css) %]
