Add SPI to disable media playback related features https://bugs.webkit.org/show_bug.cgi?id=284868 rdar://141667729
Reviewed by Per Arne Vollan.

* Source/WTF/Scripts/GeneratePreferences.rb:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Scripts/PreferencesTemplates/WebPreferencesFeatures.cpp.erb:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences _disableMediaPlaybackRelatedFeatures]):
* Source/WebKit/UIProcess/API/Cocoa/WKPreferencesPrivate.h:
* Source/WebKit/UIProcess/WebPreferences.h:

Canonical link: https://commits.webkit.org/288430@main

--- a/Source/WebKit/Scripts/PreferencesTemplates/WebPreferencesFeatures.cpp.erb
+++ b/Source/WebKit/Scripts/PreferencesTemplates/WebPreferencesFeatures.cpp.erb
@@ -157,4 +157,18 @@ void WebPreferences::disableRichJavaScriptFeatures()
 <%- end -%>
 }
 
+void WebPreferences::disableMediaPlaybackRelatedFeatures()
+{
+    UpdateBatch batch(*this);
+<%- for @pref in @exposedPreferences.select(&:mediaPlaybackRelated) do -%>
+<%- if @pref.condition -%>
+#if <%= @pref.condition %>
+<%- end -%>
+    set<%= @pref.name %>(false);
+<%- if @pref.condition -%>
+#endif
+<%- end -%>
+<%- end -%>
+}
+
 }
