--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -1412,6 +1412,10 @@ thead, tbody, tfoot, tr, td, th, dir, dd, dl, dt, menu, ol, ul, li, bdi, output,
     unicode-bidi: isolate; 
 }
 
+textarea[dir=auto i], pre[dir=auto i] {
+    unicode-bidi: plaintext;
+}
+
 input[type=tel i]:dir(ltr) { direction: ltr; }
 
 bdo, bdo[dir] {
