A typo error that needs to be fixed. https://bugs.webkit.org/show_bug.cgi?id=285430
Reviewed by Tim Nguyen.

* Websites/bugs.webkit.org/template/en/custom/index.html.tmpl:

Canonical link: https://commits.webkit.org/288662@main

--- a/Websites/bugs.webkit.org/template/en/custom/index.html.tmpl
+++ b/Websites/bugs.webkit.org/template/en/custom/index.html.tmpl
@@ -156,7 +156,7 @@
           <h3>Past Day of Modified [% terms.Bugs %]</h3>
           <p>[% terms.Bugs %] changed in the last 24 hours</p>
         </a>
-        <a href="buglist.cgi?chfieldfrom=24h" class="query">
+        <a href="buglist.cgi?chfieldfrom=7d" class="query">
           <h3>Past Week of Modified [% terms.Bugs %]</h3>
           <p>[% terms.Bugs %] changed in the last 7 days</p>
         </a>
