--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -2,7 +2,7 @@
  * The default style sheet used to render HTML.
  *
  * Copyright (C) 2000 Lars Knoll (knoll@kde.org)
- * Copyright (C) 2003-2024 Apple Inc. All rights reserved.
+ * Copyright (C) 2003-2025 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -1051,11 +1051,21 @@ input:is([type="checkbox"], [type="radio"]):checked:disabled {
 }
 #endif
 
-#if defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY
 input[type="color"] {
+    appearance: auto;
+    box-sizing: border-box;
+    outline: none;
+#if defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY
+    width: 28px;
+    height: 28px;
     padding: 3px;
-}
+    border: initial;
+    border-radius: 50%;
+#else
+    inline-size: 44px;
+    block-size: 23px;
 #endif
+}
 
 input[type="color"]::-webkit-color-swatch-wrapper {
     display: flex;
