Web Inspector: virtualize `WI.TreeOutline` in `WI.OpenResourceDialog` https://bugs.webkit.org/show_bug.cgi?id=286724
Reviewed by BJ Burg.

This should improve the performance of searching for and jumping to a resource when inspecting sites that have a lot of resources as there will be less elements in the DOM.

* Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.js:
(WI.OpenResourceDialog):

* Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.css:
(.open-resource-dialog > .scroll-container): Renamed from `.open-resource-dialog > .tree-outline`.
(.open-resource-dialog.has-results .scroll-container): Renamed from `.open-resource-dialog.has-results > .tree-outline`.
(.open-resource-dialog .tree-outline .item): Renamed from `.open-resource-dialog > .tree-outline .item`.
(.open-resource-dialog .tree-outline.large .item): Renamed from `.open-resource-dialog > .tree-outline.large .item`.
(.open-resource-dialog .tree-outline.large .item .icon): Renamed from `.open-resource-dialog > .tree-outline.large .item .icon`.
(.open-resource-dialog .tree-outline .item.selected): Renamed from `.open-resource-dialog > .tree-outline .item.selected`.
(.open-resource-dialog .tree-outline .item.selected .highlighted): Renamed from `.open-resource-dialog > .tree-outline .item.selected .highlighted`.
(.open-resource-dialog .tree-outline .item.selected .subtitle): Renamed from `.open-resource-dialog > .tree-outline .item.selected .subtitle`.
(@media (prefers-color-scheme: dark) .open-resource-dialog .tree-outline .item.selected): Renamed from `@media (prefers-color-scheme: dark) .open-resource-dialog > .tree-outline .item.selected`.
Move the `WI.TreeOutline` into it's own container so that only it is scrolled without having to account for the `<input>`.

* Source/WebInspectorUI/UserInterface/Views/TreeOutline.js:
(WI.TreeOutline.prototype._updateVirtualizedElements):
Drive-by: prevent the scrollbar from jumping around when scrolling from the top down by ensuring that the 

--- a/Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.css
+++ b/Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.css
@@ -101,7 +101,7 @@
     display: block;
 }
 
-.open-resource-dialog > .tree-outline {
+.open-resource-dialog > .scroll-container {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -110,22 +110,22 @@
     border-bottom-right-radius: 4px;
 }
 
-.open-resource-dialog.has-results > .tree-outline {
+.open-resource-dialog.has-results .scroll-container {
     border-top: solid 1px var(--border-color);
 }
 
-.open-resource-dialog > .tree-outline .item {
+.open-resource-dialog .tree-outline .item {
     flex: none;
     padding-inline-start: 10px;
     border: none;
 }
 
-.open-resource-dialog > .tree-outline.large .item {
+.open-resource-dialog .tree-outline.large .item {
     height: 44px;
     line-height: 42px;
 }
 
-.open-resource-dialog > .tree-outline.large .item .icon {
+.open-resource-dialog .tree-outline.large .item .icon {
     width: 32px;
     height: 32px;
     margin-top: 6px;
@@ -150,19 +150,19 @@
     vertical-align: 1px;
 }
 
-.open-resource-dialog > .tree-outline .item.selected {
+.open-resource-dialog .tree-outline .item.selected {
     color: white;
     background-color: hsl(209, 100%, 49%);
 }
 
-.open-resource-dialog > .tree-outline .item.selected .highlighted {
+.open-resource-dialog .tree-outline .item.selected .highlighted {
     background-color: var(--selected-background-color-highlight);
 
     border-bottom: none;
     text-decoration: underline;
 }
 
-.open-resource-dialog > .tree-outline .item.selected .subtitle {
+.open-resource-dialog .tree-outline .item.selected .subtitle {
     color: hsla(0, 0%, 100%, 0.9);
 }
 
@@ -180,7 +180,7 @@
         color: var(--text-color-secondary);
     }
 
-    .open-resource-dialog > .tree-outline .item.selected {
+    .open-resource-dialog .tree-outline .item.selected {
         background-color: var(--selected-background-color);
         color: white;
     }
