Web Inspector: Enable Memory profiling in Workers https://bugs.webkit.org/show_bug.cgi?id=167323
Reviewed by BJ Burg.

The Web Inspector frontend always assumes the main target when interacting with `Heap`, meaning that even though `Heap` is already enabled inside `Worker` (i.e. there's even a `WebHeapAgent`) it'll never communicate with any other `WI.Target`.

Note that there are still a few things missing from full support as `Timelines` currently only supports the main target (e.g. auto-capture in `Worker` on page load won't happen).

* Source/WebInspectorUI/UserInterface/Models/HeapAllocationsInstrument.js:
(WI.HeapAllocationsInstrument.prototype.startInstrumentation):
(WI.HeapAllocationsInstrument.prototype.stopInstrumentation):
(WI.HeapAllocationsInstrument.prototype._takeHeapSnapshot):
Start and stop `Heap` for each `WI.Target` instead of just the main target.

* Source/WebInspectorUI/UserInterface/Protocol/ConsoleObserver.js:
(WI.ConsoleObserver.prototype.heapSnapshot):
* Source/WebInspectorUI/UserInterface/Protocol/HeapObserver.js:
(WI.HeapObserver.prototype.trackingStart):
(WI.HeapObserver.prototype.trackingComplete):
* Source/WebInspectorUI/UserInterface/Proxies/HeapSnapshotDiffProxy.js:
(WI.HeapSnapshotDiffProxy):
(WI.HeapSnapshotDiffProxy.deserialize):
(WI.HeapSnapshotDiffProxy.prototype.get target): Added.
(WI.HeapSnapshotDiffProxy.prototype.instancesWithClassName):
(WI.HeapSnapshotDiffProxy.prototype.nodeWithIdentifier):
* Source/WebInspectorUI/UserInterface/Proxies/HeapSnapshotNodeProxy.js:
(WI.HeapSnapshotNodeProxy):
(WI.HeapSnapshotNodeProxy.deserialize):
(WI.HeapSnapshotNodeProxy.prototype.get target): Added.
(WI.HeapSnapshotNodeProxy.prototype.shortestGCRootPath):
(WI.HeapSnapshotNodeProxy.prototype.dominatedNodes):
(WI.HeapSnapshotNodeProxy.prototype.retainedNodes):
(WI.HeapSnapshotNodeProxy.prototype.retainers):
* Source/WebInspectorUI/UserInterface/Proxies/HeapSnapshotProxy.js:
(WI.HeapSnapshotProxy):
(WI.HeapSnapshotProxy.deserialize):
(WI.He

--- a/Source/WebInspectorUI/UserInterface/Views/TextNavigationItem.css
+++ b/Source/WebInspectorUI/UserInterface/Views/TextNavigationItem.css
@@ -40,3 +40,9 @@
 .navigation-bar .item:last-child.text {
     padding-inline-end: 2px;
 }
+
+@media (prefers-color-scheme: dark) {
+    .navigation-bar .item.text {
+        color: var(--text-color-secondary);
+    }
+}
