[Text Wrapping] Add performance tests for text-wrap-style:pretty. https://bugs.webkit.org/show_bug.cgi?id=286171 <rdar://143071848>
Reviewed by Alan Baradlay.

This change adds performance tests for text-wrap-style:pretty and will allow
developers to measure relative performance between text-wrap-styles
as well as performance implications of future development.

Canonical link: https://commits.webkit.org/290287@main

--- a/PerformanceTests/Layout/TextWrap/text-wrap-style-pretty.html
+++ b/PerformanceTests/Layout/TextWrap/text-wrap-style-pretty.html
@@ -1,14 +1,15 @@
+<!-- webkit-test-runner [ CSSTextWrapPrettyEnabled=true ]-->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>text-wrap-style: balance performance test</title>
+        <title>text-wrap-style: auto performance test</title>
         <script src="../../resources/runner.js"></script>
     </head>
     <style>
         #target {
             display: none;
             width: 1000px;
-            text-wrap-style: balance;
+            text-wrap-style: pretty;
             font-size: 10px;
             font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
         }
