Web Inspector: Timelines: Script: make the target into a hierarchical path component https://bugs.webkit.org/show_bug.cgi?id=288262
Reviewed by BJ Burg.

Instead of having a `WI.DataGrid` column for the `target`/"context" in `WI.ScriptDetailsTimelineView` and a dropdown to switch the `WI.CallingContextTree` based on the selected `WI.Target` in `WI.ScriptProfileTimelineView`, the `WI.Target` should be a hierarchical path component to have similar behavior to elsewhere in Web Inspector.

This also means that distinct `WI.ScriptProfileTimelineView` and `WI.ScriptDetailsTimelineView` are created for each `WI.Target` (as needed) instead of having each hold and switch between or display all `WI.Target` in the `WI.TimelineRecording`.

Note that the `WI.HierarchicalPathComponent` for the `WI.Target` is only shown if there's more than one `WI.Target` in the `WI.TimelineRecording`.

* Source/WebInspectorUI/UserInterface/Views/ScriptClusterTimelineView.js:
(WI.ScriptClusterTimelineView):
(WI.ScriptClusterTimelineView.createPathComponent):
(WI.ScriptClusterTimelineView.prototype.reset):
(WI.ScriptClusterTimelineView.prototype.get selectionPathComponents):
(WI.ScriptClusterTimelineView.prototype.saveToCookie):
(WI.ScriptClusterTimelineView.prototype.restoreFromCookie):
(WI.ScriptClusterTimelineView.prototype.closed):
(WI.ScriptClusterTimelineView.prototype._updateCurrentContentView):
(WI.ScriptClusterTimelineView.prototype._createTargetPathComponent): Added.
(WI.ScriptClusterTimelineView.prototype._sortTargetPathComponents): Added.
(WI.ScriptClusterTimelineView.prototype._handleViewPathComponentSelected):
(WI.ScriptClusterTimelineView.prototype._handleTargetAdded): Added.
(WI.ScriptClusterTimelineView.prototype._handleTargetPathComponentSelected): Added.
(WI.ScriptClusterTimelineView.prototype._scriptClusterViewCurrentContentViewDidChange):
(WI.ScriptClusterTimelineView.prototype.get eventsContentView): Deleted.
(WI.ScriptClusterTimelineView.prototype.get profileContentView): De

--- a/Source/WebInspectorUI/UserInterface/Views/PathComponentIcons.css
+++ b/Source/WebInspectorUI/UserInterface/Views/PathComponentIcons.css
@@ -115,6 +115,14 @@
     content: url(../Images/TypeIcons.svg#Source-light);
 }
 
+.page-icon .icon {
+    content: url(../Images/DocumentIcons.svg#markup-light);
+}
+
+.worker-icon .icon {
+    content: url(../Images/DocumentIcons.svg#worker-light);
+}
+
 @media (prefers-color-scheme: dark) {
     .request-icon .icon {
         content: url(../Images/TypeIcons.svg#Request-dark);
@@ -202,5 +210,13 @@
 
     .source-icon .icon {
         content: url(../Images/TypeIcons.svg#Source-dark);
+    }
+
+    .page-icon .icon {
+        content: url(../Images/DocumentIcons.svg#markup-dark);
+    }
+
+    .worker-icon .icon {
+        content: url(../Images/DocumentIcons.svg#worker-dark);
     }
 }
