Change the initial value of dynamic-range-limit to constrained-high and add a UA style rule to continue rendering videos in full HDR https://bugs.webkit.org/show_bug.cgi?id=288748 rdar://145784202
Reviewed by Cameron McCormack.

To start gently along the path to HDR websites, this
patch sets the initial (aka default) value of
dynamic-range-limit to constrained-high.

For historical reasons, videos have already been
presented in full HDR, so a UA rule was added to make
videos no-limit by default.

* LayoutTests/fast/css/dynamic-range-limit-default-expected.txt: Added.
* LayoutTests/fast/css/dynamic-range-limit-default.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-hdr/inheritance-expected.txt:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/html.css:
(video):
* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::applyUASheetBehaviorsToContext):
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/platform/graphics/MediaPlayer.h:
* Source/WebCore/platform/graphics/PlatformDynamicRangeLimit.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::initialDynamicRangeLimit):
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertDynamicRangeLimit):
* Tools/TestWebKitAPI/Tests/WebCore/PlatformDynamicRangeLimitTests.cpp:
(TestWebKitAPI::TEST(PlatformDynamicRangeLimit, DefaultConstruction)):

Canonical link: https://commits.webkit.org/291421@main

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -167,6 +167,7 @@ video {
     -webkit-tap-highlight-color: transparent;
 #endif
     content: normal !important;
+    dynamic-range-limit: no-limit;
 }
 
 audio {
