Force field-sizing to fixed when control autofilled https://bugs.webkit.org/show_bug.cgi?id=269126
Reviewed by Tim Nguyen.

Add a UA style rule to force field-sizing to fixed when an element is autofilled.

* LayoutTests/fast/forms/text/text-field-sizing-autofill-expected.txt: Added.
* LayoutTests/fast/forms/text/text-field-sizing-autofill.html: Added.
* Source/WebCore/css/html.css:
(:autofill):
* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::applyUASheetBehaviorsToContext):

Canonical link: https://commits.webkit.org/291833@main

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -853,6 +853,10 @@ input:-webkit-autofill, input:-webkit-autofill-strong-password, input:-webkit-au
     color: #000000 !important;
 }
 
+:autofill {
+    field-sizing: fixed !important;
+}
+
 input:is([type="radio"], [type="checkbox"]) {
     margin: 3px 2px;
     box-sizing: border-box;
