--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -1408,16 +1408,8 @@ iframe {
     border: 2px inset;
 }
 
-address, blockquote, center, div, figure, figcaption, footer, form, header, hr,
-legend, listing, main, p, plaintext, pre, summary, xmp, article, aside, h1, h2,
-h3, h4, h5, h6, hgroup, nav, section, search, table, caption, colgroup, col,
-thead, tbody, tfoot, tr, td, th, dir, dd, dl, dt, menu, ol, ul, li, bdi, output,
-[dir=ltr i], [dir=rtl i], [dir=auto i] {
-    unicode-bidi: isolate; 
-}
-
-textarea[dir=auto i], pre[dir=auto i] {
-    unicode-bidi: plaintext;
+hr, bdi, output {
+    unicode-bidi: isolate;
 }
 
 input[type=tel i]:dir(ltr) { direction: ltr; }
