Web Inspector: Timelines: show a separate overview record bar row for each `WI.Target` https://bugs.webkit.org/show_bug.cgi?id=288687
Reviewed by BJ Burg.

This will allow developers to more visually distinguish activity based on the `WI.Target` (e.g. is this page activity or in a `Worker`?).

* Source/WebInspectorUI/UserInterface/Views/ScriptTimelineOverviewGraph.js:
(WI.ScriptTimelineOverviewGraph):
(WI.ScriptTimelineOverviewGraph.prototype.reset):
(WI.ScriptTimelineOverviewGraph.prototype.layout):
(WI.ScriptTimelineOverviewGraph.prototype.layout.createBar):
(WI.ScriptTimelineOverviewGraph.prototype.updateSelectedRecord):
(WI.ScriptTimelineOverviewGraph.prototype._scriptTimelineRecordAdded):

* Source/WebInspectorUI/UserInterface/Views/ScriptTimelineOverviewGraph.css:
(.timeline-overview-graph.script > .graph-row): Added.
(.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(1)): Added.
(.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(2), .timeline-overview-graph.script > .graph-row:first-child:nth-last-child(2) ~ .graph-row): Added.
(.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(3), .timeline-overview-graph.script > .graph-row:first-child:nth-last-child(3) ~ .graph-row): Added.
(.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(4), .timeline-overview-graph.script > .graph-row:first-child:nth-last-child(4) ~ .graph-row): Added.
(.timeline-overview-graph.script > .graph-row > .timeline-record-bar): Renamed from `.timeline-overview-graph.script > .timeline-record-bar`.
(.timeline-overview-graph.script > .graph-row > .timeline-record-bar > .segment): Renamed from `.timeline-overview-graph.script > .timeline-record-bar > .segment`.
Adjust the height of the record bar row based on how many of them there are.

* Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css:
(.timeline-overview > .graphs-container > .timeline-overview-graph):
(.timeline-overview:not(.frames) > .gr

--- a/Source/WebInspectorUI/UserInterface/Views/ScriptTimelineOverviewGraph.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ScriptTimelineOverviewGraph.css
@@ -23,11 +23,46 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-.timeline-overview-graph.script > .timeline-record-bar {
-    margin-top: 8px;
-    height: 20px;
+.timeline-overview-graph.script > .graph-row {
+    /* (--graph-row-height * rows) + (--graph-row-margin * (rows + 1)) = --timeline-overview-graph-height - --timeline-overview-graph-border-top-height */
+    height: var(--graph-row-height);
+    margin-bottom: var(--graph-row-margin);
+    padding-top: var(--graph-row-margin);
 }
 
-.timeline-overview-graph.script > .timeline-record-bar > .segment {
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(1) {
+    --graph-row-height: 21px;
+    --graph-row-margin: 7px;
+}
+
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(2),
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(2) ~ .graph-row {
+    --graph-row-height: 12px;
+    --graph-row-margin: 4px;
+}
+
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(3),
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(3) ~ .graph-row {
+    --graph-row-height: 8px;
+    --graph-row-margin: 3px;
+}
+
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(4),
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(4) ~ .graph-row {
+    --graph-row-height: 6.5px;
+    --graph-row-margin: 2px;
+}
+
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(5),
+.timeline-overview-graph.script > .graph-row:first-child:nth-last-child(5) ~ .graph-row {
+    --graph-row-height: 6px;
+    --graph-row-margin: 1px;
+}
+
+.timeline-overview-graph.script > .graph-row > .timeline-record-bar {
+    height: var(--graph-row-height);
+}
+
+.timeline-overview-graph.script > .graph-row > .timeline-record-bar > .segment {
     border-radius: 2px;
 }
