Web Inspector: REGRESSION(?): Sources: async boundary lines missing https://bugs.webkit.org/show_bug.cgi?id=290026
Reviewed by BJ Burg.

* Source/WebInspectorUI/UserInterface/Views/CallFrameTreeElement.css:
(.call-frame:is(.async-boundary, .truncated-boundary)):
The `::after` is sized `width: 100%`, which will always overflow, so ensure that `text-overflow` is not `ellipsis` (which comes from `.call-frame`/`WI.CallFrameView`).
Ideally we'd change the size of the `::after`, but we don't know for sure the length of the async boundary name.

Canonical link: https://commits.webkit.org/292434@main

--- a/Source/WebInspectorUI/UserInterface/Views/CallFrameTreeElement.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CallFrameTreeElement.css
@@ -62,6 +62,7 @@ body:not(.window-inactive, .window-docked-inactive) .tree-outline:focus-within .
 .call-frame:is(.async-boundary, .truncated-boundary) {
     cursor: default;
     color: var(--text-color-gray-medium);
+    text-overflow: clip;
 }
 
 .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary {
