Web Inspector: REGRESSION(289844@main): virtualized `WI.TreeOutline` can sometimes jump around https://bugs.webkit.org/show_bug.cgi?id=290031
Reviewed by BJ Burg.

* Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.css:
(.open-resource-dialog > .scroll-container):
(.open-resource-dialog > .scroll-container > .virtualized-spacer): Added.
The `offsetParent` is not the same thing as `parentNode`.  Mark the parent as `position: relative` to make it qualify.
Ensure that the spacers before and after the `WI.TreeOutline` do not shrink since the `offsetParent` is `display: flex;`.

* Source/WebInspectorUI/UserInterface/Views/TreeOutline.js:
(WI.TreeOutline.prototype.registerScrollVirtualizer):
(WI.TreeOutline.prototype._updateVirtualizedElements):
(WI.TreeOutline.prototype._updateVirtualizedElements.walk): Deleted.
Rework the math to calculate what `WI.TreeElement` should be attached to or removed from the DOM to lower the chance of errors by basing the spacer heights on what's actually in the DOM.

Drive-by: leverage `WI.TreeElement.prototype.traverseNextTreeElement` instead of having custom tree walking logic.
Canonical link: https://commits.webkit.org/292455@main

--- a/Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.css
+++ b/Source/WebInspectorUI/UserInterface/Views/OpenResourceDialog.css
@@ -104,6 +104,7 @@
 .open-resource-dialog > .scroll-container {
     display: flex;
     flex-direction: column;
+    position: relative;
     overflow-y: auto;
 
     border-bottom-left-radius: 4px;
@@ -112,6 +113,10 @@
 
 .open-resource-dialog.has-results .scroll-container {
     border-top: solid 1px var(--border-color);
+}
+
+.open-resource-dialog > .scroll-container > .virtualized-spacer {
+    flex-shrink: 0;
 }
 
 .open-resource-dialog .tree-outline .item {
