REGRESSION(285754@main): [GTK] Undocked Web Inspector has empty area below title bar https://bugs.webkit.org/show_bug.cgi?id=290308
Reviewed by BJ Burg.

Re-add the .platform-mac selector to the CSS rule that adds the empty
are where the Mac port overlays the window controls. The rule should
not be applied to any of the other ports.

* Source/WebInspectorUI/UserInterface/Views/Variables.css:
(&.mac-platform:not(.docked)):
(&:not(.docked)): Deleted.

Canonical link: https://commits.webkit.org/292647@main

--- a/Source/WebInspectorUI/UserInterface/Views/Variables.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Variables.css
@@ -434,7 +434,8 @@ body {
         }
     }
 
-    &:not(.docked) {
+    /* Only needed by the Mac port, keep in sync with `WI.undockedTitleAreaHeight` */
+    &.mac-platform:not(.docked) {
         --undocked-title-area-height: calc(27px / var(--zoom-factor));
     }
 }
